--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "gh-pages": "^6.3.0",
     "vite": "^7.1.7"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
+
