--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@vitejs/plugin-react": "^5.1.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "gh-pages": "^6.3.0",
+    "rollup": "^3.29.4",
     "vite": "^7.1.7"
   },
   "engines": {
     "node": "20.x"
   }
 }
-
